bug.txt
   Compiling proc-macro2 v1.0.59
   Compiling unicode-ident v1.0.9
   Compiling quote v1.0.28
   Compiling autocfg v1.1.0
   Compiling libc v0.2.144
   Compiling syn v2.0.18
   Compiling cfg-if v1.0.0
   Compiling log v0.4.18
   Compiling lock_api v0.4.9
   Compiling once_cell v1.17.2
   Compiling parking_lot_core v0.9.7
   Compiling signal-hook-registry v1.4.1
   Compiling scopeguard v1.1.0
   Compiling smallvec v1.10.0
   Compiling mio v0.8.8
   Compiling pin-project-lite v0.2.9
   Compiling parking_lot v0.12.1
   Compiling indexmap v1.9.3
   Compiling bytes v1.4.0
   Compiling cc v1.0.79
   Compiling futures-core v0.3.28
   Compiling pkg-config v0.3.27
   Compiling tokio v1.28.2
   Compiling openssl-sys v0.9.88
   Compiling hashbrown v0.12.3
   Compiling bitflags v1.3.2
   Compiling tokio-macros v2.1.0
   Compiling socket2 v0.4.9
   Compiling num_cpus v1.15.0
   Compiling itoa v1.0.6
   Compiling futures-task v0.3.28
   Compiling tracing-core v0.1.31
   Compiling slab v0.4.8
   Compiling memchr v2.5.0
   Compiling foreign-types-shared v0.1.1
   Compiling futures-util v0.3.28
   Compiling openssl v0.10.53
   Compiling fnv v1.0.7
   Compiling http v0.2.9
   Compiling foreign-types v0.3.2
   Compiling tracing v0.1.37
   Compiling openssl-macros v0.1.1
   Compiling httparse v1.8.0
   Compiling crc32fast v1.3.2
   Compiling pin-utils v0.1.0
   Compiling native-tls v0.2.11
   Compiling tinyvec_macros v0.1.1
   Compiling serde v1.0.163
   Compiling syn v1.0.109
   Compiling futures-sink v0.3.28
   Compiling futures-channel v0.3.28
   Compiling unicode-segmentation v1.10.1
   Compiling tokio-util v0.7.8
   Compiling tinyvec v1.6.0
   Compiling serde_derive v1.0.163
   Compiling try-lock v0.2.4
   Compiling winnow v0.4.6
   Compiling signal-hook v0.3.15
   Compiling toml_datetime v0.6.2
   Compiling percent-encoding v2.2.0
   Compiling adler v1.0.2
   Compiling openssl-probe v0.1.5
   Compiling miniz_oxide v0.7.1
   Compiling form_urlencoded v1.1.0
   Compiling toml_edit v0.19.10
   Compiling want v0.3.0
   Compiling h2 v0.3.19
   Compiling unicode-normalization v0.1.22
   Compiling http-body v0.4.5
   Compiling serde_json v1.0.96
   Compiling ryu v1.0.13
   Compiling tower-service v0.3.2
   Compiling unicode-bidi v0.3.13
   Compiling httpdate v1.0.2
   Compiling hyper v0.14.26
   Compiling idna v0.3.0
   Compiling flate2 v1.0.26
   Compiling proc-macro-crate v1.3.1
   Compiling tokio-native-tls v0.3.1
   Compiling thiserror v1.0.40
   Compiling unicode-width v0.1.10
   Compiling cassowary v0.3.0
   Compiling hyper-tls v0.5.0
   Compiling num_enum_derive v0.5.11
   Compiling signal-hook-mio v0.2.3
   Compiling async-compression v0.4.0
   Compiling url v2.3.1
   Compiling serde_urlencoded v0.7.1
   Compiling heck v0.3.3
   Compiling thiserror-impl v1.0.40
   Compiling encoding_rs v0.8.32
   Compiling minimal-lexical v0.2.1
   Compiling ipnet v2.7.2
   Compiling mime v0.3.17
   Compiling base64 v0.21.2
   Compiling nom v7.1.3
   Compiling reqwest v0.11.18
   Compiling strum_macros v0.20.1
   Compiling num_enum v0.5.11
   Compiling crossterm v0.26.1
   Compiling ratatui v0.21.0
error[E0252]: the name `Line` is defined multiple times
 --> /home/horryportier/.cargo/registry/src/github.com-1ecc6299db9ec823/ratatui-0.21.0/src/buffer.rs:5:24
  |
5 |     text::{Line, Span, Line},
  |            ----        ^^^^ `Line` reimported here
  |            |
  |            previous import of the type `Line` here
  |
  = note: `Line` must be defined only once in the type namespace of this module

error[E0255]: the name `Line` is defined multiple times
 --> /home/horryportier/.cargo/registry/src/github.com-1ecc6299db9ec823/ratatui-0.21.0/src/text/line.rs:5:1
  |
1 | use super::{Span, Line, Style};
  |                   ---- previous import of the type `Line` here
...
5 | pub struct Line<'a> {
  | ^^^^^^^^^^^^^^^^^^^ `Line` redefined here
  |
  = note: `Line` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
  |
1 | use super::{Span, Line as OtherLine, Style};
  |                   ~~~~~~~~~~~~~~~~~

error[E0119]: conflicting implementations of trait `From<text::line::Line<'_>>` for type `text::line::Line<'_>`
   --> /home/horryportier/.cargo/registry/src/github.com-1ecc6299db9ec823/ratatui-0.21.0/src/text/line.rs:137:1
    |
137 | impl<'a> From<Line<'a>> for Line<'a> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: conflicting implementation in crate `core`:
            - impl<T> From<T> for T;

error[E0119]: conflicting implementations of trait `From<text::line::Line<'_>>` for type `Text<'_>`
   --> /home/horryportier/.cargo/registry/src/github.com-1ecc6299db9ec823/ratatui-0.21.0/src/text.rs:419:1
    |
411 | impl<'a> From<Line<'a>> for Text<'a> {
    | ------------------------------------ first implementation here
...
419 | impl<'a> From<Line<'a>> for Text<'a> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Text<'_>`

error[E0119]: conflicting implementations of trait `From<Vec<text::line::Line<'_>>>` for type `Text<'_>`
   --> /home/horryportier/.cargo/registry/src/github.com-1ecc6299db9ec823/ratatui-0.21.0/src/text.rs:434:1
    |
426 | impl<'a> From<Vec<Line<'a>>> for Text<'a> {
    | ----------------------------------------- first implementation here
...
434 | impl<'a> From<Vec<Line<'a>>> for Text<'a> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Text<'_>`

Some errors have detailed explanations: E0119, E0252, E0255.
For more information about an error, try `rustc --explain E0119`.
error: could not compile `ratatui` due to 5 previous errors
warning: build failed, waiting for other jobs to finish...
